Exemplo de 'Dark Mode'

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="assets/style.css" />
-		<title>Just... cats!</title>
+		<title>Dark mode and Light Mode</title>
 	</head>
 	<body>
 		<main>
-			<h1>Just... cats!</h1>
-			<img id="cat" /><br />
-			<button id="change-cat">Change cat</button>
+			<h1 id="page-title">Light Mode ON</h1>
+			<button aria-label="selecionar-modo" id="mode-selector">Dark Mode</button>
 		</main>
+
+		<footer>Basecamp Javascript @ Digital Innovation One</footer>
 		<script src="assets/script.js"></script>
 	</body>
 </html>
